--- a/darelsalam/assets/stylesheets/jednotka_green.css
+++ b/darelsalam/assets/stylesheets/jednotka_green.css
@@ -1,5 +1,5 @@
-@import url(http://fonts.googleapis.com/css?family=Roboto:100,400,300,500);
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,600,700);
+@import url(http://fonts.googleapis.com/css?family=Roboto:100,400,300,500&subset=cyrillic-ext);
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,600,700&subset=cyrillic-ext);
 /**
  * Name: Jednotka - Multipurpose Website HTML Template
  * Author: http://themeforest.net/user/BublinaStudio
