--- a/darelsalam/assets/stylesheets/custom.css
+++ b/darelsalam/assets/stylesheets/custom.css
@@ -164,6 +164,15 @@
   margin-bottom: 5px;
 }
 
+.list-group-item__submenu-item.active a {
+  text-decoration: underline;
+  font-weight: bold;
+}
+
+.list-group .list-group-item.active .list-group-item__category-link a {
+  color: #fff;
+}
+
 
 
 
