--- a/rbk/assets/css/screen.css
+++ b/rbk/assets/css/screen.css
@@ -1,5 +1,6 @@
 @import url('reset.css');
 @import url('flexboxgrid.css');
+@import url('fonts.css');
 
 @import url('puzzle-icon.css');
 @import url('puzzle-text.css');
