--- a/rbk/style.css
+++ b/rbk/style.css
@@ -11,14 +11,55 @@
   text-align: right;
 }
 
+body {
+  font-family: ProximaNova, Arial, "Helvetica Neue", Helvetica, sans-serif;
+}
+
 .page-wrapper {
-  font-family: Roboto, Arial, "Helvetica Neue", Helvetica, sans-serif;
   font-size: 18px;
   color: #364155;
   background-color: #fff;
 }
 
+.rbk-header {
+  background: #eef2f4;
+  box-shadow: 0 2px 23px 0 rgba(109,127,126,0.43);
+  padding: 30px 0;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.rbk-header__menu {
+  font-size: 0;
+}
+
+a.rbk-header__menu-item {
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 17px;
+  display: inline-block;
+  vertical-align: middle;
+  color: #191d23;
+  letter-spacing: 0;
+  text-transform: uppercase;
+  border-radius: 30px;
+  padding: 6px 6px 5px;
+}
+
+a.rbk-header__menu-item:hover {
+  color: #00a9a8;
+}
+
+a.rbk-header__menu-item.is-active {
+  background-color: #00a9a8;
+  padding: 6px 10px 5px;
+  color: #fff;
+  cursor: default;
+}
+
 .rbk-terminator {
+  font-family: Roboto, Arial, "Helvetica Neue", Helvetica, sans-serif;
   background: #f3f6f8 url('assets/img/terminator-bg.png') 50% 0 no-repeat;
   padding-top: 15vh;
   padding-bottom: 5vh;
@@ -62,6 +103,11 @@
 
 .rbk-terminator__social-item {
   margin-right: 15px;
+}
+
+.rbk-header__search {
+  margin-left: 21px;
+  cursor: pointer;
 }
 
 /*Extra small devices (phones)*/
