added main slider html

--- a/rbk/style.css
+++ b/rbk/style.css
@@ -13,6 +13,7 @@
 
 body {
   font-family: ProximaNova, Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-size: 18px;
 }
 
 .page-wrapper {
@@ -58,66 +59,74 @@ a.rbk-header__menu-item.is-active {
   cursor: default;
 }
 
-.rbk-terminator {
-  font-family: Roboto, Arial, "Helvetica Neue", Helvetica, sans-serif;
-  background: #f3f6f8 url('assets/img/terminator-bg.png') 50% 0 no-repeat;
-  padding-top: 15vh;
-  padding-bottom: 5vh;
-  min-height: 100vh;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-.rbk-terminator__message {
-  text-align: center;
-  font-size: 24px;
-  color: #00a9a8;
-  margin-bottom: 10vh;
-}
-
-.rbk-terminator__logo {
-  margin-bottom: 5vh;
-}
-
-.rbk-terminator__logo .puzzle-icon {
-  max-width: 100%;
-}
-
-.rbk-terminator__content {
-  padding-left: 45px;
-}
-
-.rbk-terminator__content-text {
-  line-height: 29px;
-  padding-bottom: 3.5vh;
-  margin-bottom: 3vh;
-  border-bottom: 2px solid #c8d0d6;
-}
-
-.rbk-terminator-address {
-  line-height: 25px;
-  font-size: 16px;
-  margin-bottom: 3vh;
-}
-
-.rbk-terminator__social-item {
-  margin-right: 15px;
-}
-
 .rbk-header__search {
   margin-left: 21px;
   cursor: pointer;
 }
 
-/*Extra small devices (phones)*/
+.rbk-main-slider {
+  background: #fff url('assets/img/green_back.png') 50% 0 no-repeat;
+  color: #fff;
+}
 
-@media only screen and (max-width : 767px) {
+.rbk-main-slider-content {
+  padding-top: 54px;
+}
 
-  .rbk-terminator {
-    padding-top: 8vh;
-  }
+.rbk-main-slider__item-pic {
+  max-width: 100%;
+}
 
+.rbk-main-slider__item-pic img {
+  max-width: 100%;
+}
+
+.rbk-main-slider__item-text {
+  padding-left: 25px;
+}
+
+.rbk-main-slider__item-text-title {
+  font-size: 38px;
+  letter-spacing: -0.8px;
+  line-height: 57px;
+  font-weight: 600;
+}
+
+.rbk-main-slider__item-text-subtitle {
+  line-height: 32px;
+}
+
+.rbk-main-slider__item .more-button {
+  margin-top: 20px;
+}
+
+.rbk-main-slider__item .more-button:hover {
+  color: #08a0a1;
+}
+
+.rbk-main-slider__paginator-item {
+  display: inline-block;
+  vertical-align: middle;
+  margin-right: 8px;
+  border: 1px solid #c1c1c1;
+  border-radius: 50%;
+  width: 9px;
+  height: 9px;
+  cursor: pointer;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.rbk-main-slider__paginator-item.active {
+  cursor: default;
+  background-color: #00a9a8;
+  border-color: #00a9a8;
+}
+
+.rbk-main-slider__paginator {
+  margin-left: 25px;
+  margin-top: -45px;
 }
 
 
