--- a/rbk/style.css
+++ b/rbk/style.css
@@ -23,6 +23,7 @@ body {
 }
 
 .rbk-header {
+  position: relative;
   background: #eef2f4;
   box-shadow: 0 2px 23px 0 rgba(109,127,126,0.43);
   padding: 30px 0;
@@ -61,6 +62,39 @@ a.rbk-header__menu-item.is-active {
 
 .rbk-header__search {
   margin-left: 21px;
+  cursor: pointer;
+}
+
+.rbk-header__search-form {
+    padding: 18px 0;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.rbk-header__search-form-input {
+  width: 100%;
+  font-size: 24px;
+  color: #252b33;
+  padding: 11px 0;
+}
+
+.rbk-header__search-form-btn {
+  margin-right: 50px;
+}
+
+.rbk-header__search-form-btn a {
+  border-width: 2px;
+  padding: 15px 48px 14px;
+}
+
+.rbk-header__search-form-close {
   cursor: pointer;
 }
 
