--- a/rbk/style.css
+++ b/rbk/style.css
@@ -17,6 +17,7 @@ body {
 }
 
 .page-wrapper {
+  min-height: calc(100vh - 394px);
   position: relative;
   font-size: 18px;
   color: #364155;
@@ -588,6 +589,102 @@ a.rbk-header__menu-item.is-active {
   display: none;
 }
 
+.rbk-subheader {
+  background: #fff url('assets/img/green_back.png') 50% 0 no-repeat;
+  color: #fff;
+  padding: 73px 20px 70px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.rbk-subheader__title {
+  font-size: 38px;
+  line-height: 57px;
+  font-weight: 600;
+  text-align: center;
+}
+
+.rbk-about__title {
+  font-size: 38px;
+  line-height: 57px;
+  margin-top: 37px;
+  margin-bottom: 40px;
+}
+
+.rbk-about__text {
+  font-size: 16px;
+  line-height: 29px;
+  margin-bottom: 10px;
+}
+
+.rbk-about__subtitle {
+  font-size: 20px;
+  line-height: 57px;
+  font-weight: 600;
+}
+
+.rbk-about__management {
+  background-color: #f1f4f6;
+  padding: 12px 40px 51px;
+  margin-top: 75px;
+}
+
+.rbk-about__management-title {
+  font-size: 22px;
+  line-height: 57px;
+  font-weight: 600;
+}
+
+.rbk-about__management-person-pic {
+  width: 95px;
+  height: 95px;
+  border-radius: 50%;
+  overflow: hidden;
+  margin-right: 20px;
+}
+
+.rbk-about__management-person-pic img {
+  width: 100%;
+  height: 100%;
+}
+
+.rbk-about__management-person {
+  font-size: 16px;
+  line-height: 28px;
+  margin-bottom: 57px;
+}
+
+.rbk-about__management-person:last-child {
+  margin-bottom: 0;
+}
+
+.rbk-about__management-person-info {
+  max-width: 70%;
+}
+
+.rbk-about__management-person-name {
+  font-size: 16px;
+  line-height: 28px;
+  font-weight: 600;
+}
+
+.rbk-about__geography {
+  padding-top: 164px;
+  padding-bottom: 81px;
+}
+
+.rbk-about__geography-title {
+  font-size: 38px;
+  line-height: 57px;
+  margin-bottom: 33px;
+  text-align: center;
+}
+
+.rbk-about__geography-map img {
+  max-width: 100%;
+}
+
 /* mobile and tablet menu */
 
 @media only screen and (max-width: 1024px) {
@@ -637,6 +734,66 @@ a.rbk-header__menu-item.is-active {
 /* Small devices (tablets, 768px and up) */
 
 @media only screen and (min-width: 768px) and (max-width: 992px) {
+
+  .rbk-about__geography-title {
+    font-size: 24px;
+    line-height: 57px;
+    margin-bottom: 11px;
+  }
+
+  .rbk-about__geography {
+    padding-top: 42px;
+    padding-bottom: 44px;
+  }
+
+  .rbk-about__management-person-info {
+    max-width: 72%;
+  }
+
+  .rbk-about__management {
+    padding-right: 20px;
+  }
+
+  .rbk-about__management-person {
+    margin-bottom: 32px;
+  }
+
+  .rbk-about__management-person-pic {
+    margin-right: 10px;
+  }
+
+  .rbk-about__management-person-name {
+    font-size: 14px;
+    line-height: 22px;
+  }
+
+  .rbk-about__management-person-pic {
+    width: 65px;
+    height: 65px;
+  }
+
+  .rbk-about__management-title {
+    font-size: 18px;
+    line-height: 57px;
+  }
+
+  .rbk-about__subtitle {
+    font-size: 24px;
+    line-height: 57px;
+  }
+
+  .rbk-about__text {
+    font-size: 14px;
+    line-height: 22px;
+  }
+
+  .rbk-about__title {
+    font-size: 24px;
+    line-height: 57px;
+    margin-top: 50px;
+    margin-bottom: 5px;
+    font-weight: 600;
+  }
 
   .rbk-main-slider__item {
     width: 768px;
@@ -809,6 +966,77 @@ a.rbk-header__menu-item.is-active {
 /*Extra small devices (phones)*/
 
 @media only screen and (max-width : 767px) {
+
+  .rbk-about__title {
+    font-size: 24px;
+    line-height: 57px;
+    margin-top: 13px;
+    margin-bottom: 5px;
+    font-weight: 600;
+  }
+
+  .rbk-about__subtitle {
+    font-size: 24px;
+    line-height: 57px;
+  }
+
+  .rbk-about__text {
+    font-size: 14px;
+    line-height: 22px;
+  }
+
+  .rbk-about__management {
+    margin-right: -1rem;
+    margin-left: -1rem;
+    padding-left: 22px;
+    padding-right: 22px;
+  }
+
+  .rbk-about__management-title {
+    font-size: 18px;
+    line-height: 57px;
+  }
+
+  .rbk-about__management-person-pic {
+    width: 65px;
+    height: 65px;
+  }
+
+  .rbk-about__management-person {
+    margin-bottom: 32px;
+  }
+
+  .rbk-about__management-person-pic {
+    margin-right: 10px;
+  }
+
+  .rbk-about__management-person-name,
+  .rbk-about__management-person-post {
+    font-size: 14px;
+    line-height: 22px;
+  }
+
+  .rbk-about__geography {
+    padding-top: 28px;
+    padding-bottom: 24px;
+  }
+
+  .rbk-about__geography-title {
+    font-size: 24px;
+    line-height: 45px;
+    margin-bottom: 10px;
+  }
+
+  .rbk-subheader {
+    padding-top: 36px;
+    padding-bottom: 34px;
+  }
+
+  .rbk-subheader__title {
+    font-size: 24px;
+    letter-spacing: -0.51px;
+    line-height: 30px;
+  }
 
   .rbk-header__menu-item.is-search {
     display: inline-block;
